--- a/12-1-way-anova.qmd
+++ b/12-1-way-anova.qmd
@@ -601,141 +601,33 @@ anova(m1)$"F value"[1] # Store-bought F
 
 ## 8 Practice exercises
 
-For these exercises, run the code below to recreate the data object `pest`. There are 40 rows and two variables: `damage` and `treatment`.
-
-```{r}
-pest <- structure(list(damage = c(113.7, 94.4, 103.6, 
-                                  106.3, 104, 98.9, 
-                          115.1, 99.1, 120.2, 99.4, 
-                          88, 97.9, 61.1, 72.2, 73.7, 
-                          81.4, 72.2, 48.4, 50.6, 88.2, 
-                          46.9, 32.2, 48.3, 62.1, 69, 
-                          45.7, 47.4, 32.4, 54.6, 43.6, 
-                          104.6, 107, 110.4, 93.9, 105, 
-                          82.8, 92.2, 91.5, 75.9, 100.4), 
-                       treatment = c("control", "control", 
-                                     "control", "control",
-                                     "control", "control", 
-                                     "control", "control", 
-                                     "control", "control",
-                                     "x.half", "x.half", 
-                                     "x.half", "x.half", 
-                                     "x.half", "x.half", 
-                                     "x.half", "x.half", 
-                                     "x.half", "x.half", 
-                                     "x.full", "x.full", 
-                                     "x.full", "x.full",
-                                     "x.full", "x.full", 
-                                     "x.full", "x.full", 
-                                     "x.full", "x.full", 
-                                     "organic", "organic", 
-                                     "organic", "organic", 
-                                     "organic", "organic", 
-                                     "organic", "organic", 
-                                     "organic", "organic")), 
-                  class = "data.frame", 
-                  row.names = c(NA, -40L))
-```
+For the following exercises, use the dataset in the file 1.5-OrchardSprays.csv. The dataset is in tidy format. Take advantage of this by looking at the terse information present in the data dictionary tab. The data are from an experiment testing the effectiveness of different pesticide treatments on red lily beetle damage to lily leaves. There will be some data handling as part of the exercises below, a practical and important part of every real data analysis.
 
 <br>
 
-Think of this data as the result of an experiment looking at the effectiveness of pesticide treatment on leaf damage. Let us imagine that this experiment measured leaf damage (variable "damage" measured in mm squared) and that the plants were treated with one of 4 treatment levels:
+### 8.1 Loading and Exploring the Pesticide Dataset
 
-Variable `treatment` with levels
-
--   `control`
-
--   `x.half`
-
--   `x.full`
-
--   `organic`
-
-The experiment is of course designed to look at an overall effect the various treatments may have to reduce leaf damage relative to the `control.` In addition, it is of interest to examine the effect of the `organic` treatment compared to that of the `x.half` to the `x.full.`
-
-The experiment ran using 40 potted plants spaced 1m from each other in a greenhouse setting. Each treatment was randomly assigned to 10 plants. Onto each plant was placed 5 red lily beetle (*Lilioceris lilii*) pairs.
-
-<br>
-
-<center>
-
-![Red lily beetle](img/2.6-red-lily-beetle.jpg)
-
-</center>
-
-<br>
-
-### 8.1
-
-Make a good, appropriate graph representing the overall experiment. Show your code. Describe any trends in the data that are apparent from the graph, as well as an initial assessment of principle assumptions of 1-way ANOVA based only on your single graph.
-
-<br>
-
-::: {.callout-tip collapse="true"}
-## Solution: Visualizing Treatment Effects on Leaf Damage
+Read in the data from the file 1.5-OrchardSprays.csv. Use the `read.csv()` function. Print the first few rows of the data, and check the structure of the data. Show your code.
 
 ```{r}
 #| echo: true
 #| eval: false
 
-# Create a boxplot showing damage by treatment
-boxplot(damage ~ treatment, data = pest,
-        main = "Effect of Treatments on Leaf Damage",
-        xlab = "Treatment Type",
-        ylab = "Leaf Damage (mm²)",
-        col = c("lightgray", "lightgreen", "lightblue", "lightyellow"))
+# Read in the data from the file 1.5-OrchardSprays.csv
+pest <- read.csv("1.5-OrchardSprays.csv")
 
-# Add horizontal line for grand mean
-abline(h = mean(pest$damage), 
-       lty = 2, lwd = 2, col = "red")
+# Print the first few rows of the data
+head(pest)
 
-# Add raw data points
-set.seed(123)  # For reproducible jitter
-points(x = jitter(as.numeric(factor(pest$treatment)), amount = 0.1),
-       y = pest$damage,
-       pch = 19, col = "blue", cex = 0.8)
-
-# Add mean points for each group
-means <- tapply(pest$damage, pest$treatment, mean)
-points(x = 1:4, y = means, 
-       pch = 18, col = "red", cex = 2)
-
-# Add legend
-legend("topright", 
-       legend = c("Individual observations", "Group mean", "Grand mean"),
-       pch = c(19, 18, NA),
-       lty = c(NA, NA, 2),
-       col = c("blue", "red", "red"),
-       pt.cex = c(0.8, 2, NA),
-       lwd = c(NA, NA, 2))
+# Check the structure of the data
+str(pest)
 ```
 
-The boxplot reveals clear trends in the data:
-
-1. The control group shows the highest leaf damage, with a median around 100 mm².
-2. The x.full treatment appears most effective at reducing damage, with values clustering around 50 mm².
-3. The x.half treatment shows intermediate effectiveness.
-4. The organic treatment shows damage levels closer to the control.
-
-Initial assessment of ANOVA assumptions:
-- The spread (variance) appears roughly similar across treatments, suggesting homoscedasticity.
-- The distributions within each treatment look approximately symmetric, with no extreme outliers.
-- Each box contains 10 observations, providing adequate sample size per group.
-- There's clear separation between some groups, suggesting potential significant differences.
-
-The visualization supports proceeding with formal assumption testing for ANOVA.
-:::
-
 <br>
 
-### 8.2
+### 8.2 Testing Normality of Residuals
 
 Test the assumption of Gaussian residuals for 1-way ANOVA using any graphs or NHST approach that you deem appropriate. Show your code and briefly describe your EDA findings and conclusion as to whether these data adhere to the Gaussian assumption.
-
-<br>
-
-::: {.callout-tip collapse="true"}
-## Solution: Testing Gaussian Residuals Assumption
 
 ```{r}
 #| echo: true
@@ -769,27 +661,11 @@ shapiro_test <- shapiro.test(pest_residuals)
 shapiro_test
 ```
 
-The graphical assessment of residuals shows:
-
-1. The histogram of residuals appears roughly bell-shaped, with a slight right skew but no extreme departures from normality.
-
-2. The Q-Q plot shows that most points fall along the reference line, with minor deviations at the tails. This suggests the residuals are approximately normally distributed.
-
-3. The Shapiro-Wilk test (W = 0.97, p = 0.38) indicates no significant departure from normality, as the p-value is well above the conventional threshold of 0.05.
-
-Based on both visual inspection and formal testing, we can conclude that the residuals adequately meet the Gaussian assumption required for ANOVA. The slight deviations observed are not severe enough to invalidate the use of parametric ANOVA for this dataset.
-:::
-
 <br>
 
-### 8.3
+### 8.3 Testing Homoscedasticity
 
 Test the assumption of homoscedasticity of residuals for 1-way ANOVA using any graphs or NHST approach that you deem appropriate. Show your code and briefly describe your EDA findings and conclusion as to whether these data adhere to the homoscedasticity assumption.
-
-<br>
-
-::: {.callout-tip collapse="true"}
-## Solution: Testing Homoscedasticity Assumption
 
 ```{r}
 #| echo: true
@@ -819,27 +695,11 @@ bartlett_test <- bartlett.test(damage ~ treatment, data = pest)
 bartlett_test
 ```
 
-The assessment of homoscedasticity shows:
-
-1. The plot of residuals versus fitted values shows no clear pattern or funnel shape, suggesting consistent variance across the range of fitted values.
-
-2. The boxplot of residuals by treatment group shows similar spread (box width and whisker length) across all four treatments, indicating similar variances.
-
-3. The Bartlett test (K-squared = 1.89, df = 3, p = 0.60) confirms that there is no significant difference in variances between the treatment groups, as the p-value is well above 0.05.
-
-Based on both visual inspection and formal testing, we can conclude that the data meet the homoscedasticity assumption required for ANOVA. The variances appear to be sufficiently homogeneous across treatment groups to proceed with parametric analysis.
-:::
-
 <br>
 
-### 8.4
+### 8.4 Performing One-way ANOVA
 
 Perform either a 1-way ANOVA or an appropriate alternative based on your findings in the previous answers. Show your code, state your results in the technical style and briefly interpret your findings.
-
-<br>
-
-::: {.callout-tip collapse="true"}
-## Solution: One-way ANOVA Analysis
 
 ```{r}
 #| echo: true
@@ -861,29 +721,11 @@ eta_squared <- SS_treatment / SS_total
 eta_squared
 ```
 
-The one-way ANOVA reveals a significant effect of treatment type on leaf damage (F(3, 36) = 32.82, p < 0.001). This indicates that at least one treatment differs significantly from the others in its effect on leaf damage.
-
-The mean damage values for each treatment were:
-- Control: 104.0 mm²
-- X.half: 71.3 mm²
-- X.full: 48.2 mm²
-- Organic: 97.3 mm²
-
-The eta-squared value of 0.73 indicates that approximately 73% of the total variance in leaf damage is explained by the treatment factor, representing a large effect size.
-
-These results strongly suggest that the pesticide treatments have differential effects on reducing leaf damage from red lily beetles. The x.full treatment appears most effective at reducing damage, followed by x.half, while the organic treatment shows damage levels closer to the control. Further post-hoc testing is needed to determine which specific treatments differ significantly from each other.
-:::
-
 <br>
 
-### 8.5
+### 8.5 Post-hoc Analysis of Treatment Effects
 
 Perform an appropriate set of *post hoc* tests to compare pairwise mean differences in these data. Focus on the *post hoc* questions of interest: Is the organic pesticide effective? Does dose matter in the non-organic treatments?
-
-<br>
-
-::: {.callout-tip collapse="true"}
-## Solution: Post-hoc Analysis of Treatment Effects
 
 ```{r}
 #| echo: true
@@ -927,101 +769,8 @@ legend("topright",
        cex = 0.8, bty = "n")
 ```
 
-The Tukey HSD post-hoc test reveals:
-
-1. **Organic pesticide effectiveness**: The comparison between organic and control treatments shows no significant difference (diff = -6.7 mm², p = 0.56). This indicates that the organic pesticide is not effective at reducing leaf damage compared to no treatment.
-
-2. **Dose effect**: The comparison between x.half and x.full treatments shows a significant difference (diff = 23.1 mm², p < 0.001). This indicates that dose does matter, with the full-strength non-organic pesticide being significantly more effective than the half-strength version.
-
-Other significant findings:
-- Both x.half and x.full treatments resulted in significantly less damage than the control (p < 0.001).
-- Both x.half and x.full treatments resulted in significantly less damage than the organic treatment (p < 0.001).
-
-The results can be summarized with significance groups:
-- Group A: Control and Organic (not significantly different from each other)
-- Group B: X.half (significantly different from all other treatments)
-- Group C: X.full (significantly different from all other treatments)
-
-These findings suggest that while conventional pesticides are effective at reducing leaf damage from red lily beetles, with higher doses providing better protection, the organic alternative tested here does not provide significant benefits compared to using no treatment at all.
-:::
-
 <br>
 
-### 8.6
+### 8.6 Create Your Own ANOVA Question
 
 Write a plausible practice question involving any aspect of data handling, graphing or analysis for the 1-way ANOVA framework for the iris data (`data(iris)`; `help(iris)`).
-
-<br>
-
-::: {.callout-tip collapse="true"}
-## Solution: Iris Dataset ANOVA Question
-
-A plausible practice question would be:
-
-"Using the built-in iris dataset in R, investigate whether there are significant differences in sepal width among the three iris species (setosa, versicolor, and virginica). Follow these steps:
-
-1. Create an appropriate visualization that shows the distribution of sepal width for each species.
-2. Test the assumptions of ANOVA (normality of residuals and homoscedasticity).
-3. Perform a one-way ANOVA to determine if there are significant differences in sepal width among species.
-4. If significant differences are found, conduct appropriate post-hoc tests to determine which specific species differ from each other.
-5. Calculate and interpret an appropriate effect size measure.
-6. Report your findings in the technical style, including a clear interpretation of the biological significance of your results.
-
-Your answer should include all necessary code, appropriate visualizations, and thorough interpretation of the statistical results."
-
-```{r}
-#| echo: true
-#| eval: false
-
-# Load the iris dataset
-data(iris)
-
-# Example solution code:
-# 1. Visualization
-boxplot(Sepal.Width ~ Species, data = iris,
-        main = "Sepal Width by Iris Species",
-        xlab = "Species",
-        ylab = "Sepal Width (cm)",
-        col = c("lightpink", "lightblue", "lightgreen"))
-
-# Add raw data points
-set.seed(123)
-points(x = jitter(as.numeric(iris$Species), amount = 0.1),
-       y = iris$Sepal.Width,
-       pch = 19, col = "darkgray", cex = 0.7)
-
-# Add mean points
-species_means <- tapply(iris$Sepal.Width, iris$Species, mean)
-points(1:3, species_means, pch = 18, col = "red", cex = 1.5)
-
-# 2. Test assumptions
-iris_model <- aov(Sepal.Width ~ Species, data = iris)
-
-# Normality of residuals
-shapiro.test(residuals(iris_model))
-
-# Homoscedasticity
-bartlett.test(Sepal.Width ~ Species, data = iris)
-
-# 3. Perform ANOVA
-summary(iris_model)
-
-# 4. Post-hoc tests
-TukeyHSD(iris_model)
-
-# 5. Effect size (eta-squared)
-anova_summary <- summary(iris_model)
-SS_species <- anova_summary[[1]][1, "Sum Sq"]
-SS_total <- sum(anova_summary[[1]][, "Sum Sq"])
-eta_squared <- SS_species / SS_total
-eta_squared
-```
-
-This question tests students' ability to:
-1. Apply ANOVA in a biological context
-2. Create informative visualizations
-3. Test and interpret statistical assumptions
-4. Perform and interpret post-hoc tests
-5. Calculate and interpret effect sizes
-6. Communicate statistical results in scientific format
-:::
