Update image width in `12-1-way-anova.qmd` and corresponding HTML file to enhance visual clarity. Add image to `13-reproducibility.qmd` for consistency in presentation across documents.

--- a/13-reproducibility.qmd
+++ b/13-reproducibility.qmd
@@ -2,6 +2,13 @@
 title: "13 Reproducibility"
 ---
 
+<center>
+
+![Arrange the arithmetic to compare more than two groups](img/row.png){width="500px"}
+
+</center>
+
+
 ::: callout-note
 ## Learning Objectives
 
