--- a/13-reproducibility.qmd
+++ b/13-reproducibility.qmd
@@ -4,10 +4,9 @@ title: "13 Reproducibility"
 
 <center>
 
-![Arrange the arithmetic to compare more than two groups](img/row.png){width="500px"}
+![Reproducible research is beautiful](img/reproducibility.png){width="500px"}
 
 </center>
-
 
 ::: callout-note
 ## Learning Objectives
@@ -152,7 +151,7 @@ A good README file typically includes:
 
 <br>
 
-### Exercise 1: Project Evaluation
+### 5.1 Project Evaluation
 
 Evaluate a recent project of yours for reproducibility. Identify three specific improvements you could make to enhance its reproducibility.
 
@@ -220,7 +219,7 @@ renv::snapshot()
 
 <br>
 
-### Exercise 2: File Organization
+### 5.2 File Organization
 
 Create a file organization template for your next data analysis project, following the best practices outlined in this lesson.
 
@@ -279,7 +278,7 @@ Key features of this template:
 
 <br>
 
-### Exercise 3: Function Documentation
+### 5.3 Function Documentation
 
 Write documentation for a simple R function that you commonly use, following the guidelines for effective code documentation.
 
